# babbler

./: .gitignore  Cargo.toml  README.md  flake.nix  hashes.toml  mod.nu
.github/workflows/: nix.yml
src/: main.rs
test_files/: db.kdbx
