[package]
name = "babbler"
version = "0.1.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.174", features = ["std", "derive"] }
serde_json = "1.0.103"
subprocess = "0.2.9"
tokio = { version = "1.29.1", features = ["full"] }
